--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,11 @@ Visualizacion/static_input.txt
 Visualizacion/dynamic_output.xyz
 
 Visualizacion/evolucion_distribucion.csv
+
+Simulacion/dynamic_input.txt
+
+Simulacion/dynamic_output.txt
+
+Simulacion/static_input.txt
+
+Visualizacion/dynamic_output.txt
