Auto stash before merge of "main" and "origin/main"

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,11 @@ Simulacion/dynamic_output.txt
 Simulacion/static_input.txt
 
 Visualizacion/dynamic_output.txt
+
+Simulacion/evolucion_distribucion.csv
+
+Visualizacion/evolucion_distribucion2.csv
+
+Visualizacion/evolucion_distribucion3.csv
+
+Visualizacion/evolucion_distribucion4.csv
