Auto stash before merge of "main" and "origin/main"

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,5 @@ Visualizacion/evolucion_distribucion2.csv
 Visualizacion/evolucion_distribucion3.csv
 
 Visualizacion/evolucion_distribucion4.csv
+
+Visualizacion/evolucion_distribucion1.csv
