Generacion y visualizacion de tiempo para el equilibrio con error

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,5 @@ Visualizacion/evolucion_distribucion3.csv
 Visualizacion/evolucion_distribucion4.csv
 
 Visualizacion/evolucion_distribucion1.csv
+
+*.csv
